--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,40 @@ version: '2'
 
 services:
   web:
-    image: stono/asksarge
     restart: always
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 8999:8999
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.4.3
+    restart: always
+    container_name: elasticsearch
+    environment:
+      - cluster.name=docker-cluster
+      - xpack.security.enabled=false
+      - http.host=0.0.0.0
+      - transport.host=0.0.0.0
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - http.cors.enabled=true
+      - http.cors.allow-origin=*
+      - "http.cors.allow-methods=OPTIONS, HEAD, GET, POST, PUT, DELETE"
+      - "http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type, Content-Length"
+      - XPACK_MONITORING_ENABLED=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
+    ports:
+      - 9200:9200
+
+  head:
+    image: mobz/elasticsearch-head:5
+    restart: always
+    container_name: head
+    ports:
+      - 9100:9100
