--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,17 @@ branches:
   only:
     - master
 
+env:
+  - ES_VERSION=5.4.3 ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
+
+install:
+  - wget ${ES_DOWNLOAD_URL}
+  - tar -xzf elasticsearch-${ES_VERSION}.tar.gz
+  - ./elasticsearch-${ES_VERSION}/bin/elasticsearch &
+
+script:
+  - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
+
 after_success:
   - sudo apt-get update && sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-engine
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
