--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 
 script:
   - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
+  - npm run test
 
 after_success:
   - sudo apt-get update && sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-engine
