--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 
 services:
   web:
+    image: stono/asksarge
+    container_name: web
     restart: always
     build:
       context: .
@@ -11,8 +13,8 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.4.3
-    restart: always
     container_name: elasticsearch
+    restart: always
     environment:
       - cluster.name=docker-cluster
       - xpack.security.enabled=false
@@ -35,7 +37,7 @@ services:
 
   head:
     image: mobz/elasticsearch-head:5
-    restart: always
     container_name: head
+    restart: always
     ports:
       - 9100:9100
