--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    depends_on:
+      - elasticsearch
     ports:
       - 8999:8999
 
