--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - sleep 5
 
 script:
+  - docker-compose build web
   - docker-compose run --rm web npm run test
 
 after_success:
