--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOST=elasticsearch
     ports:
       - 8999:8999
 
