--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,9 @@ before_script:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker-compose pull elasticsearch web
   - docker-compose up -d elasticsearch
-  - sleep 5
 
 script:
-  - docker-compose build web
+  - docker build -f Dockerfile -t stono/asksarge --cache-from stono/asksarge .
   - docker-compose run --rm web npm run test
 
 after_success:
