--- a/package.json
+++ b/package.json
@@ -26,42 +26,32 @@
     "populate": "DEBUG=ig:* node populate.js"
   },
   "dependencies": {
-    "@google-cloud/language": "0.10.5",
-    "@google-cloud/storage": "1.1.1",
-    "async": "^2.5.0",
-    "basicauth-middleware": "^2.0.0",
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.6.8",
-    "elasticsearch": "^13.2.0",
+    "@google-cloud/language": "0.10.6",
+    "async": "2.5.0",
+    "basicauth-middleware": "2.0.0",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.8",
+    "elasticsearch": "13.2.0",
     "express": "4.15.3",
-    "express-session": "^1.15.3",
-    "glob": "^7.1.2",
+    "express-session": "1.15.3",
+    "glob": "7.1.2",
     "ioredis": "3.1.1",
     "pug": "2.0.0-rc.2",
-    "socket.io": "2.0.3",
-    "uuid": "^3.1.0",
-    "yargs": "8.0.2"
+    "socket.io": "2.0.3"
   },
   "devDependencies": {
-    "@google-cloud/nodejs-repo-tools": "1.4.15",
-    "ava": "0.20.0",
-    "colors": "^1.1.2",
-    "deride": "^1.1.0",
-    "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
+    "colors": "1.1.2",
+    "deride": "1.1.0",
+    "grunt": "1.0.1",
+    "grunt-contrib-jshint": "1.1.0",
     "grunt-contrib-less": "1.4.1",
     "grunt-contrib-uglify": "3.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-istanbul": "^5.0.2",
-    "grunt-mocha-test": "^0.13.2",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-mocha-test": "0.13.2",
     "grunt-notify": "0.4.5",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "mocha-jenkins-reporter": "^0.3.7",
-    "proxyquire": "1.8.0",
-    "readline": "^1.3.0",
-    "should": "^11.2.0",
-    "sinon": "2.3.6"
+    "mocha": "3.4.2",
+    "readline": "1.3.0",
+    "should": "11.2.1"
   },
   "keywords": [],
   "license": "MIT"
